--- a/QuestionsGame/QuestionsGame/resultwrong.xaml
+++ b/QuestionsGame/QuestionsGame/resultwrong.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="QuestionsGame.result"
+             x:Class="QuestionsGame.resultwrong"
              BackgroundColor="#183E65">
   
-  <Image Source="right.jpg"/>
+  <Image Source="wrong.png"/>
 </ContentPage>
